# C2A

./: CMakeLists.txt  LICENSE  README.md
C2A/include/: C2A_Internal.h  InterpMotion.h  LinearMath.h
C2A/src/: C2A.cpp  C2A_BV.cpp  C2A_Build.cpp  C2A_PQP.cpp  InterpMotion.cpp
CCDDemo/: mainTorusknot.cpp
demo/include/: ccd.h  model.h
demo/src/: main.cpp  model.cpp
